2010-03-22 Thunor <thunorsif_at_hotmail.com>
* Fixed an issue with the load selector changing the working directory
  and the GP2X's relatively referenced rcfile being written elsewhere.
* Added -d command line option to show any input device IDs on-screen.

2010-03-21 Thunor <thunorsif_at_hotmail.com>
* Added a protected property to ctrl_remaps to prevent modifying some
  important universally active controls such as toggle-keyboard.
* Tweaked the blinking selector speed.

2010-03-20 Thunor <thunorsif_at_hotmail.com>
* Changed ZX80's vkeyb selected default to W for LOAD.
* Added the modifiable project colours to the rcfile.
* Added runtime joystick controls remapping feature to enable the
  remapping of existing controls allocated for use within the emulator
  (COMP_EMU) or new controls for use throughout the program (COMP_ALL).

2010-03-19 Chris Young <chris_at_unsatisfactorysoftware.co.uk>
* Added RESOURCEFILE tooltype for Amiga build to configure where
  the rcfile is located (and the filename)

2010-03-18 Thunor <thunorsif_at_hotmail.com>
* Added an rcfile sz81rc which is located wherever the target platform
  requires it to be. Currently the joystick_dead_zone and the control
  remappings are written to and read from it but there'll be more.
  I've designed it so that the same macro names used in the code can
  be used within the configuration items.

2010-03-15 Thunor <thunorsif_at_hotmail.com>
* For some reason I had the GNU GPL v3 at the top of my sdl.c/h when
  I should have used the same v2 from z81. I've now fixed them.
* I've split the 3100+ line sdl.c up into several more organised files.

2010-03-14 Thunor <thunorsif_at_hotmail.com>
* Vkeyb hotspots now have transparent corners, and their alpha's
  increase/decrease in relative units which means that they can still
  be seen when the vkeyb is almost invisible.
* Changed load selector selected default to Enter, and vkeyb to J.
* Fixed a situation whereby joystick fake-mouse button events and