@@ -95,7 +95,7 @@ void sdl_rcfile_read(void) {
 	if ((fp = fopen(filename, "r")) == NULL) {
 		fprintf(stderr, "Cannot read from %s\n", filename);
 		/* Schedule a new default rcfile */
-		rcfile.rewrite = TRUE;
+		rcfile.rewrite = 2;
 		return;
 	}
 
@@ -491,6 +491,247 @@ void rcfile_write(void) {
 			fprintf(fp, "\n");
 		}
 	}
+
+	#if defined(PLATFORM_GP2X)
+	#elif defined(PLATFORM_ZAURUS)
+	#elif defined(__amigaos4__)
+	#else
+		if (rcfile.rewrite == 2) {
+			fprintf(fp, "## Sample Joystick Control Set\n");
+			fprintf(fp, "## ---------------------------\n");
+			fprintf(fp, "## Due to the fact that sz81 is awaiting the inclusion of a graphical\n");
+			fprintf(fp, "## joystick configurator, manual intervention is currently required to\n");
+			fprintf(fp, "## configure your joystick for use within sz81 if you wish to use one.\n");
+			fprintf(fp, "## Please read the Controls->Joystick Support section within the README\n");
+			fprintf(fp, "## as it explains how to implement this sample set.\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "## Universally active\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_ALL\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=2\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_F1\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_ALL\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=5\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_REMAP\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "## Active within the emulator only\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=12\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_q\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=13\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_a\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=10\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_o\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=11\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_p\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=4\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_0\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=SDLK_LSHIFT\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=0\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_SPACE\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=3\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_RETURN\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=1\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_RETURN\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_EMU\n");
+			fprintf(fp, "#ctrl_remap.protected=FALSE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=6\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_LSHIFT\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "## Active within the load selector only\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=12\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_q\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=13\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_a\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=10\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_W\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=11\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_E\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=0\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_SPACE\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=3\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_HIT\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_LOAD\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=1\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_RETURN\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "## Active within the virtual keyboard only\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=12\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_N\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=13\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_S\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=10\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_W\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=11\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_E\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=4\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_0\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=SDLK_LSHIFT\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=0\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_SPACE\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=3\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_CURSOR\n");
+			fprintf(fp, "#ctrl_remap.remap_id=CURSOR_HIT\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=1\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_RETURN\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "#\n");
+			fprintf(fp, "#ctrl_remap.components=COMP_VKEYB\n");
+			fprintf(fp, "#ctrl_remap.protected=TRUE\n");
+			fprintf(fp, "#ctrl_remap.device=DEVICE_JOYSTICK\n");
+			fprintf(fp, "#ctrl_remap.id=6\n");
+			fprintf(fp, "#ctrl_remap.remap_device=DEVICE_KEYBOARD\n");
+			fprintf(fp, "#ctrl_remap.remap_id=SDLK_LSHIFT\n");
+			fprintf(fp, "#ctrl_remap.remap_mod_id=\n");
+			fprintf(fp, "\n");
+		}
+	#endif
+
 	fclose(fp);
 	
 	rcfile.rewrite = FALSE;
