@@ -30,12 +30,12 @@ if test -a VERSION ; then
 			echo "Description: ${TARGET} for the Sharp Zaurus" >> zaurus/control
 			echo "Source: http://${TARGET}.sourceforge.net/" >> zaurus/control
 
-			cp zaurus/control ipk/CONTROL/
-			cp zaurus/${TARGET}.desktop ipk/${PREFIX}/apps/Games/
+			cp zaurus/control ipk/CONTROL
+			cp zaurus/${TARGET}.desktop ipk/${PREFIX}/apps/Games
 			cp icon32.png ipk/${PREFIX}/pics/${TARGET}.png
-			cp ${TARGET} zaurus/run${TARGET} ipk/${PREFIX}/bin/
-			cp README ipk/${PREFIX}/share/${TARGET}/README
-			cp ChangeLog NEWS COPYING ipk/${PREFIX}/share/${TARGET}/
+			cp ${TARGET} zaurus/run${TARGET} ipk/${PREFIX}/bin
+			cp README ipk/${PREFIX}/share/${TARGET}
+			cp ChangeLog NEWS COPYING ipk/${PREFIX}/share/${TARGET}
 
 			zaurus/_ipkg-build ipk
 			
